--- a/index.html
+++ b/index.html
@@ -361,6 +361,27 @@
               </div>
             </main>
 
+            <!--About Us-->
+            <div class="container mt-3">
+                <h2>About Us</h2>
+                <div class="row mt-3">
+                <div class="col-lg-6 col-md-1 text-justify ">
+                    Welcome to <b>Gocode</b>, your trusted partner in Software Development, Web Development, and IT Products. Our mission is to empower businesses with innovative and efficient technological solutions tailored to meet your unique needs.
+
+                    With a team of skilled professionals passionate about technology, we specialize in delivering top-notch software and web development services that drive growth and streamline operations. Our expertise spans across various industries, ensuring that our solutions are not only cutting-edge but also practical and impactful.
+
+                    We pride ourselves on our customer-centric approach, working closely with you to understand your challenges and goals. Whether you need custom software development, robust web applications, or high-quality IT products, we are dedicated to providing solutions that exceed your expectations.
+
+                    At Gocode, we believe in continuous learning and improvement. Our commitment to staying at the forefront of technology enables us to offer innovative products and services that help you stay competitive in a rapidly evolving digital landscape.
+
+                    Join us on a journey of transformation and success. Together, let's build a future where technology serves as a powerful catalyst for your business growth.
+                </div>
+                <div class="col-lg-6 col-md-1">
+                    <img src="Assets/images/about.jpg" class="img-fluid rounded-3">
+                </div>
+            </div>
+            </div>
+
             <!--footer-->
             <footer class="pt-4 my-md-5 pt-md-5 border-top" id="footer">
               <div class="row">
